syntax = "proto3";

import "google/protobuf/any.proto";

package protocol;

option java_package = "org.linda.protos";
option java_outer_classname = "Protocol";
option go_package = "github.com/lindaprotocol/grpc-api-gateway/pkg/lindapb";

enum AccountType {
  Normal = 0;
  AssetIssue = 1;
  Contract = 2;
}

enum ResourceCode {
  BANDWIDTH = 0;
  ENERGY = 1;
}

message AccountId {
  bytes name = 1;
  bytes address = 2;
}

message Vote {
  bytes vote_address = 1;
  int64 vote_count = 2;
}

message Account {
  message Frozen {
    int64 frozen_balance = 1;
    int64 expire_time = 2;
  }
  
  bytes account_name = 1;
  AccountType type = 2;
  bytes address = 3;
  int64 balance = 4;
  repeated Vote votes = 5;
  map<string, int64> asset = 6;
  repeated Frozen frozen = 7;
  int64 net_usage = 8;
  int64 create_time = 9;
  int64 latest_opration_time = 10;
  int64 allowance = 11;
  int64 latest_withdraw_time = 12;
  bytes code = 13;
  bool is_witness = 14;
  bool is_committee = 15;
  repeated Frozen frozen_supply = 16;
  bytes asset_issued_name = 17;
  map<string, int64> latest_asset_operation_time = 18;
  int64 free_net_usage = 19;
  map<string, int64> free_asset_net_usage = 20;
  int64 latest_consume_time = 21;
  int64 latest_consume_free_time = 22;
  bytes account_id = 23;
  AccountResource account_resource = 26;
  bytes code_hash = 30;
  Permission owner_permission = 31;
  Permission witness_permission = 32;
  repeated Permission active_permission = 33;
  map<string, int64> assetV2 = 34;
  map<string, int64> free_asset_net_usageV2 = 35;
  map<string, int64> latest_asset_operation_timeV2 = 36;
  int64 net_window_size = 41;
  bool net_window_optimized = 42;
  int64 delegated_frozen_balance_for_bandwidth = 51;
  int64 acquired_delegated_frozen_balance_for_bandwidth = 52;
  repeated FreezeV2 frozenV2 = 53;
  repeated UnFreezeV2 unfrozenV2 = 54;
  int64 delegated_frozenV2_balance_for_bandwidth = 55;
  int64 acquired_delegated_frozenV2_balance_for_bandwidth = 56;
}

message FreezeV2 {
  int64 amount = 1;
  ResourceCode type = 2;
}

message UnFreezeV2 {
  ResourceCode type = 1;
  int64 unfreeze_amount = 2;
  int64 unfreeze_expire_time = 3;
}

message AccountResource {
  message FrozenBalanceForEnergy {
    int64 frozen_balance = 1;
    int64 expire_time = 2;
  }
  int64 energy_usage = 1;
  FrozenBalanceForEnergy frozen_balance_for_energy = 2;
  int64 delegated_frozen_balance_for_energy = 3;
  int64 acquired_delegated_frozen_balance_for_energy = 4;
  int64 energy_window_size = 5;
  bool energy_window_optimized = 6;
  int64 latest_consume_time_for_energy = 7;
  int64 delegated_frozenV2_balance_for_energy = 8;
  int64 acquired_delegated_frozenV2_balance_for_energy = 9;
}

message Permission {
  enum PermissionType {
    Owner = 0;
    Witness = 1;
    Active = 2;
  }
  message Key {
    bytes address = 1;
    int64 weight = 2;
  }
  PermissionType type = 1;
  int32 id = 2;
  string permission_name = 3;
  int64 threshold = 4;
  int32 parent_id = 5;
  bytes operations = 6;
  repeated Key keys = 7;
}

message Witness {
  bytes address = 1;
  int64 voteCount = 2;
  bytes pubKey = 3;
  string url = 4;
  int64 totalProduced = 5;
  int64 totalMissed = 6;
  int64 latestBlockNum = 7;
  int64 latestSlotNum = 8;
  bool isJobs = 9;
}

message Votes {
  bytes address = 1;
  repeated Vote old_votes = 2;
  repeated Vote new_votes = 3;
}

enum ContractResult {
  DEFAULT = 0;
  SUCCESS = 1;
  REVERT = 2;
  BAD_JUMP_DESTINATION = 3;
  OUT_OF_MEMORY = 4;
  PRECOMPILED_CONTRACT = 5;
  STACK_TOO_SMALL = 6;
  STACK_TOO_LARGE = 7;
  ILLEGAL_OPERATION = 8;
  STACK_OVERFLOW = 9;
  OUT_OF_ENERGY = 10;
  OUT_OF_TIME = 11;
  JVM_STACK_OVER_FLOW = 12;
  CONTRACT_UNKNOWN = 13;
  TRANSFER_FAILED = 14;
}

message Authority {
  bytes account = 1;
  Permission permission = 2;
}

message Transaction {
  message Contract {
    enum ContractType {
      AccountCreateContract = 0;
      TransferContract = 1;
      TransferAssetContract = 2;
      VoteAssetContract = 3;
      VoteWitnessContract = 4;
      WitnessCreateContract = 5;
      AssetIssueContract = 6;
      DeployContract = 7;
      WitnessUpdateContract = 8;
      ParticipateAssetIssueContract = 9;
      AccountUpdateContract = 10;
      FreezeBalanceContract = 11;
      UnfreezeBalanceContract = 12;
      WithdrawBalanceContract = 13;
      UnfreezeAssetContract = 14;
      UpdateAssetContract = 15;
      ProposalCreateContract = 16;
      ProposalApproveContract = 17;
      ProposalDeleteContract = 18;
      SetAccountIdContract = 19;
      CustomContract = 20;
      CreateSmartContract = 30;
      TriggerSmartContract = 31;
      GetContract = 32;
      UpdateSettingContract = 33;
      ExchangeCreateContract = 41;
      ExchangeInjectContract = 42;
      ExchangeWithdrawContract = 43;
      ExchangeTransactionContract = 44;
      AccountPermissionUpdateContract = 46;
      ClearABIContract = 48;
      UpdateEnergyLimitContract = 49;
      AccountCreateContractV2 = 50;
      FreezeBalanceV2Contract = 51;
      UnfreezeBalanceV2Contract = 52;
      WithdrawExpireUnfreezeContract = 53;
      DelegateResourceContract = 54;
      UnDelegateResourceContract = 55;
      CancelAllUnfreezeV2Contract = 56;
      UpdateBrokerageContract = 57;
      MarketSellAssetContract = 61;
      MarketCancelOrderContract = 62;
    }
    ContractType type = 1;
    google.protobuf.Any parameter = 2;
    bytes provider = 3;
    bytes ContractName = 4;
    int64 Permission_id = 5;
  }

  message Result {
    enum code {
      SUCCESS = 0;
      FAILED = 1;
    }
    int64 fee = 1;
    code ret = 2;
    ContractResult contractRet = 3;
  }

  message raw {
    bytes ref_block_bytes = 1;
    int64 ref_block_num = 3;
    bytes ref_block_hash = 4;
    int64 expiration = 8;
    repeated Authority auths = 9;
    bytes data = 10;
    repeated Contract contract = 11;
    bytes scripts = 12;
    int64 timestamp = 14;
    int64 fee_limit = 18;
  }

  bytes txID = 1;
  raw raw_data = 2;
  repeated bytes signature = 3;
  repeated Result ret = 5;
}

message TransactionInfo {
  enum code {
    SUCESS = 0;
    FAILED = 1;
  }
  bytes id = 1;
  int64 fee = 2;
  int64 blockNumber = 3;
  int64 blockTimeStamp = 4;
  repeated bytes contractResult = 5;
  bytes contract_address = 6;
  ResourceReceipt receipt = 7;
  repeated Log log = 8;
  code result = 9;
  bytes resMessage = 10;
  string assetIssueID = 14;
  int64 withdraw_amount = 15;
  int64 unfreeze_amount = 16;
  repeated InternalTransaction internal_transactions = 17;
  int64 withdraw_expire_amount = 18;
  map<string, int64> cancel_unfreezeV2_amount = 19;
  int64 exchange_received_amount = 21;
  int64 exchange_inject_another_amount = 22;
  int64 exchange_withdraw_another_amount = 23;
  int64 exchange_id = 24;
  int64 shielded_transaction_fee = 25;
}

message TransactionReceipt {
  bytes receipt = 1;
}

message ResourceReceipt {
  int64 energy_usage = 1;
  int64 energy_fee = 2;
  int64 origin_energy_usage = 3;
  int64 energy_usage_total = 4;
  int64 net_usage = 5;
  int64 net_fee = 6;
  Transaction.Result.code result = 7;
  int64 energy_penalty_total = 8;
}

message Log {
  bytes address = 1;
  repeated bytes topics = 2;
  bytes data = 3;
}

message InternalTransaction {
  bytes internal_tx_id = 1;
  bytes from_address = 2;
  bytes to_address = 3;
  InternalTransactionData data = 4;
  int64 block_timestamp = 5;
}

message InternalTransactionData {
  string note = 1;
  bool rejected = 2;
  map<string, string> extra = 3;
}

message BlockHeader {
  message raw {
    int64 timestamp = 1;
    bytes txTrieRoot = 2;
    bytes parentHash = 3;
    int64 number = 7;
    int64 witness_id = 8;
    bytes witness_address = 9;
    int32 version = 10;
    bytes accountStateRoot = 11;
  }
  raw raw_data = 1;
  bytes witness_signature = 2;
}

message Block {
  repeated Transaction transactions = 1;
  BlockHeader block_header = 2;
  bytes blockID = 3;
}

message ChainInventory {
  message BlockId {
    bytes hash = 1;
    int64 number = 2;
  }
  repeated BlockId ids = 1;
  int64 remain_num = 2;
}

message BlockInventory {
  enum Type {
    SYNC = 0;
    ADVTISE = 1;
    FETCH = 2;
  }
  message BlockId {
    bytes hash = 1;
    int64 number = 2;
  }
  repeated BlockId ids = 1;
  Type type = 2;
}

message Inventory {
  enum InventoryType {
    LIND = 0;
    BLOCK = 1;
  }
  InventoryType type = 1;
  repeated bytes ids = 2;
}

message Items {
  enum ItemType {
    ERR = 0;
    LIND = 1;
    BLOCK = 2;
    BLOCKHEADER = 3;
  }
  ItemType type = 1;
  repeated Block blocks = 2;
  repeated BlockHeader block_headers = 3;
  repeated Transaction transactions = 4;
}

message DynamicProperties {
  int64 last_solidity_block_num = 1;
}

enum ReasonCode {
  REQUESTED = 0;
  BAD_PROTOCOL = 2;
  TOO_MANY_PEERS = 4;
  DUPLICATE_PEER = 5;
  INCOMPATIBLE_PROTOCOL = 6;
  NULL_IDENTITY = 7;
  PEER_QUITING = 8;
  UNEXPECTED_IDENTITY = 9;
  LOCAL_IDENTITY = 10;
  PING_TIMEOUT = 11;
  USER_REASON = 16;
  RESET = 17;
  SYNC_FAIL = 18;
  FETCH_FAIL = 19;
  BAD_TX = 20;
  BAD_BLOCK = 21;
  FORKED = 22;
  UNLINKABLE = 23;
  INCOMPATIBLE_VERSION = 24;
  INCOMPATIBLE_CHAIN = 25;
  TIME_OUT = 32;
  CONNECT_FAIL = 33;
  TOO_MANY_PEERS_WITH_SAME_IP = 34;
  UNKNOWN = 255;
}

message DisconnectMessage {
  ReasonCode reason = 1;
}

message HelloMessage {
  message BlockId {
    bytes hash = 1;
    int64 number = 2;
  }
  Endpoint from = 1;
  int32 version = 2;
  int64 timestamp = 3;
  BlockId genesisBlockId = 4;
  BlockId solidBlockId = 5;
  BlockId headBlockId = 6;
}

message Endpoint {
  bytes address = 1;
  int32 port = 2;
  bytes nodeId = 3;
}